--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -77,10 +77,11 @@ jobs:
       - name: Install dependencies
         shell: bash -l {0}
         run: |
+          conda install -c pytorch pytorch
           python -m pip install --upgrade pip
           python -m pip install pytest kimpy
 
-      - name: Install
+      - name: Install kliff
         shell: bash -l {0}
         run: |
           python -m pip install .
